--- a/04/css/main.css
+++ b/04/css/main.css
@@ -204,3 +204,40 @@ header {
   height: auto;
   margin: 0 15%;
 }
+.line {
+
+  width: 100%;
+  height: 200px;
+  background-color: #17291c;
+
+}
+ .line > div {
+   display: block;
+   float: left;
+   color: #cf8e70;
+   text-align: center;
+   padding: 70px 150px;
+   font-size: 1.25em;
+
+ }
+ .line  div:nth-child(2) {
+   display: block;
+   float: right;
+   padding: 60px 150px;
+ }
+.line > div > span:first-child {
+  font-size: 1.25em;
+  color: khaki;
+}
+.line > div > span:nth-child(2) {
+  font-size: 1.25em;
+  color: yellow;
+}
+.line div a {
+  display: inline-block;
+  background: blue;
+  padding: 25px;
+  text-decoration: none;
+  border-radius: 10px;
+  color: white;
+}
