--- a/04/css/main.css
+++ b/04/css/main.css
@@ -289,7 +289,7 @@ width: 90%;
 .pica i {
   position: absolute;
   bottom: 100px;
-  left: 100px;
+  left: 90px;
   z-index: 1;
   display: block;
   font-size: 2em;
@@ -302,9 +302,10 @@ width: 90%;
 .pica span {
   position: absolute;
   bottom: 90px;
-  left: 100px;
+  left: 110px;
   z-index: 1;
   color: khaki;
+
 }
 .cont {
   margin: 15px;
@@ -326,12 +327,100 @@ width: 90%;
 
 }
 .chel {
+
   margin: 30px auto;
   width: 100%;
-  height: 700px;
+  height: 1400px;
 }
 .chel img {
   margin: 0 auto;
   width: 100%;
-  height: auto;
+  height: 700px;
+}
+.linepic
+ {
+   width: 100%;
+   height: 300px;
+   background: black;
+    }
+   .linepic ul{
+      width: 100%;
+
+   }
+    .linepic ul li{
+      display: inline-block;
+      color: coral;
+      margin: 60px 5%;
+      padding: 0.5%;
+ text-align: center;
+
+    }
+.linepic ul li i {
+  font-size: 3em;
+}
+.linepic ul li p {
+  font-size: 5em;
+  color: white;
+}
+.linepic ul li span {
+
+}
+.cherta {
+  display: inline-block;
+  border-style: none;
+  width: 50%;
+  height: 3px;
+  border-radius:  1px;
+  transition: 1s;
+  background: khaki;
+}
+
+.Zagolovok2 {
+  color: grey;
+  margin: 100px auto;
+  width: 70%;
+  height: 300px;
+  text-align: center;
+}
+.Zagolovok2 h2 {
+  font-size: 3em;
+}
+.Zagolovok2 p {
+  font-size: 2em;
+}
+.lo {
+  width: 100%;
+  height: 800px;
+  background-image: url("../img/logo.jpg");
+  background-size: cover;
+}
+footer {
+  width: 100%;
+  height: 85px;
+  background: black;
+  padding-top: 85px;
+}
+.levo {
+  float: left;
+}
+.levo span {
+  font-size: 1.5em;
+  color: khaki;
+  margin: 0 80px;
+}
+.levo a {
+  font-style: normal;
+  text-decoration: none;
+  margin: 0px 20px;
+  color: coral;
+}
+.pravo {
+  margin-right: 150px;
+  float: right;
+}
+.pravo a{
+  padding: 0 20px;
+  font-size: 3em;
+  position: relative;
+  bottom:  10px;
 }
