--- a/maket/css/style.css
+++ b/maket/css/style.css
@@ -19,10 +19,47 @@
 
 
   body {
-
+  /*  font-family: 'PT Sans', sans-serif;*/
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #5e5e5e;
+  }
+  header {
+    font-family: 'Roboto', sans-serif;
   }
 
 .header_top {
   background-color: #303030;
-  
+
 }
+.header_btn {
+  float: right;
+  line-height: 36px;
+  font-family: 'Roboto', sans-serif;
+  color: #1b1b1b;
+  background-color: #ffc222;
+  padding: 5px 20px 4px 50px;
+  font-size: 16px;
+}
+.header_contacts:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.header_phone ,
+.header_email {
+  color: #cbcacb;
+  letter-spacing: 0.25px;
+  line-height: 45px;
+}
+
+.header_phone {
+  padding-left: 20px;
+  padding-right: 30px;
+}
+.header_email {
+  padding-left: 24px;
+}
+/* https://www.youtube.com/watch?v=Q2zxQNQGcU8 */
